- Change the message of the website to a student-focused message; drop the university spin for initial launch

--- a/index.html
+++ b/index.html
@@ -72,11 +72,14 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#students">For Students</a>
+                        <a class="page-scroll" href="#students">Designed For Students</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#universities">For Universities</a>
+                        <a class="page-scroll" href="#getting-started">Getting Started</a>
                     </li>
+                    <!-- <li>
+                        <a class="page-scroll" href="#universities">For Universities</a>
+                    </li> -->
                     <li>
                         <a class="page-scroll" href="#about">About</a>
                     </li>
@@ -101,7 +104,7 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Got Your Back</h1>
                         <p class="intro-text">Your personal safety network for campus&nbsp;life.<br>
-                        Created for students, family, and campus safety staff.</p>
+                        Created for students and their families.</p>
                         <a href="#students" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -115,9 +118,9 @@
     <section id="students" class="container content-section text-center">
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
-                <h2>For Students</h2>
+                <h2>Designed For Students</h2>
                 <p>Connect with friends on campus and help each other stay safe.</p>
-                <p>Start an 'Outing' when you head out.  If you don't complete the out on time, your circle of friends will be notified.</p>
+                <p>Start an 'Outing' when you head out.  If you don't complete the outing on time, your circle of friends will be notified.</p>
             </div>
         </di>
 
@@ -157,6 +160,7 @@
         </div>
         <div class="row"><br><br></div>
         <div class="row">
+            <div class="col-md-3"><br><br></div>
             <div class="col-md-5 col-md-offset-1">
                 <h4>Act On Missed Deadlines</h4>
                 <div class="row vertical-align">
@@ -164,7 +168,7 @@
                     <div class="col-xs-8 col-sm-8 text-left">
                         <ul class="bullet">
                             <li>View Last Location</li>
-                            <li>Share Details with Authorities</li>
+                            <li>Share Details</li>
                             <li>Notify Friends &amp; Family</li>
                         </ul>
                     </div>
@@ -172,26 +176,36 @@
                 </div>
             </div>
             <div class="col-md-1"><br><br></div>
-            <div class="col-md-5">
+            <div class="col-md-3"><br><br></div>
+ 
+            <!-- <div class="col-md-5">
                 <h4>Report Safety Concerns</h4>
                 <div class="row vertical-align">
                     <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-free.png" height="40px" width="40px"></div>
                     <div class="col-xs-8 col-sm-8 text-left">
                         <ul class="bullet">
-                            <!-- <li>Emergency Announcements</li>
-                            <li>Request safe ride/walk services</li>
-                            <li>Campus bus information</li> -->
                             <li>Submit Reports Anonymously</li>
                             <li>Location-Tagged Reports</li>
                         </ul>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-2"></div>
+            </div> 
+            <div class="col-md-2"></div> -->
         </div>
     </section>
 
-    <!-- For Universities Section -->
+
+   <!-- Getting Started Section -->
+    <section id="getting-started" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Getting Started</h2>
+                <p>Insert carrousel of images here<p>
+            </div>
+        </div>
+    </section>
+
+    <!-- For Universities Section 
     <section id="universities" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
@@ -206,7 +220,6 @@
                 <h4>Promote Safe Behaviors</h4>
                 <p>
                 <div class="row vertical-align">
-                    <!-- <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-sharing.png" height="40px" width="40px"></div> 00> -->
                     <div class="col-xs-8 col-sm-8 col-xs-offset-1 text-left">
                         <ul class="bullet">
                             <li>Encourage Peer Based Support</li>
@@ -220,7 +233,6 @@
             <div class="col-md-5">
                 <h4>Faciliate Reporting Safety Concerns</h4>
                 <div class="row vertical-align">
-                    <!-- <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-outing.png" height="40px" width="40px"></div> -->
                     <div class="col-xs-8 col-sm-8 col-xs-offset-1 text-left">
                         <ul class="bullet">
                             <li>Collect Anonymous Safety Reports</li>
@@ -236,7 +248,6 @@
             <div class="col-md-5 col-md-offset-1">
                 <h4>Simpify Access to Safety Services</h4>
                 <div class="row vertical-align">
-                    <!-- <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-search.png" height="40px" width="40px"></div> -->
                     <div class="col-xs-8 col-sm-8 col-xs-offset-1 text-left">
                         <ul class="bullet">
                             <li>Publish Bus Schedules</li>
@@ -251,7 +262,6 @@
             <div class="col-md-5">
                 <h4>Support Emergency Actions</h4>
                 <div class="row vertical-align">
-                    <!-- <div class="col-xs-2 col-xs-offset-1 col-sm-2"></div> -->
                     <div class="col-xs-8 col-sm-8 col-xs-offset-1 text-left">
                         <ul class="bullet">
                             <li>Push Emergency Announcements</li>
@@ -262,15 +272,15 @@
             </div>
             <div class="col-md-2"></div>
         </div>
-    </section>
+    </section> -->
 
     <!-- About Section -->
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About The App</h2>
-                <p>GotYourBack was designed to enhance security on college and university campuses.</p>
-                <p>Our goal is to encourage students to actively participate in their own security.  From supporting each other when out on a trip, reporting safety concerns,  or using support services to ensure their own safety, student involvement is critical to making safer campus environments.<p>
+                <p>GotYourBack was designed to enhance safety &amp; security on college and university campuses.</p>
+                <p>Our goal is to encourage students to actively participate in their own safety.  By supporting each other when out on a trip, student involvement makes safer campus environments.  If something does happen, GotYourBack can help by allowing students to easily share with authorities useful &amp; timely information.<p>
             </div>
         </div>
     </section>
@@ -325,6 +335,8 @@
 
     <!-- Plugin JavaScript -->
     <script src="js/jquery.easing.min.js"></script>
+
+    <script src="js/carousel.js"><script>
 
     <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ 
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
