--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     </section>
 
 
-   <!-- Getting Started Section -->
+   <!-- Getting Started Section
     <section id="getting-started" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
@@ -256,7 +256,7 @@
                 </div>           
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- For Universities Section 
     <section id="universities" class="container content-section text-center">
